# pangolin

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  TODO.txt  bootstrap_prefect.py  deploy.py  docker-compose.yml  example.env  main.py  make.ps1  prefect_manifest.yaml  pyproject.toml  requirements.txt  venv_istr.txt
config/: 0_dispatcher.yaml  1_transform_registry.yaml  2_validation_registry.yaml  constants.py  data_structure.yaml  pipeline_config.yaml  pipeline_structure.yaml  run_context.py  settings.py
config/registries/: 0_raw_validation.yaml  1_dispatcher.yaml  1_transform_registry.yaml  2_transform_registry.yaml  3_validation.yaml  4_cross_validation.yaml  5_dispatcher.yaml
docker/: .env.docker.example  Caddyfile  Dockerfile  bootstrap_prefect.py  deploy.py  prefect_manifest.yaml  requirements-docker.txt
docs/agents/: agents_guidelines.md
docs/documentation-obsidian/: Architecture Overview.md  Creating a New Processor.md  Data Structure & DataFacility.md  Docker Deployment.md  Future Developments.md  Getting Started.md  Pipeline Configuration.md  Welcome.md
docs/doumentation-obsidian/: Architecture Overview.md  Creating a New Processor.md  Future Developments.md  Getting Started.md  Pipeline Configuration.md  (+4 more)
engine/: BaseProcessor.py  DataFacility.py  DataTranformer.py  DataValidator.py  FileDispatcher.py  data_facility.py  data_handler.py  data_transformer.py  data_validator.py  file_dispatcher.py  file_handler.py  reporter.py
test_files_generator/: generator.py
utils/: fs_wrapper.py  transformers.py  validators.py
(+15 files in other folders)
