[project]
name = "pangolin"
version = "0.1.0"
description = "Data processing pipeline using Prefect"
requires-python = ">=3.10"
dependencies = [
    "altgraph==0.17.4",
    "cramjam==2.10.0",
    "fastparquet==2024.11.0",
    "fsspec==2025.3.2",
    "numpy==2.2.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "pefile==2023.2.7",
    "polars==1.23.0",
    "pyinstaller-hooks-contrib==2025.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pywin32-ctypes==0.2.3",
    "PyYAML==6.0.2",
    "setuptools==76.0.0",
    "six==1.17.0",
    "tzdata==2025.1",
    "Faker==37.12.0",
    "prefect>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.setuptools.packages.find]
exclude = ["data", "tests*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
